Updating docs for Travis build: https://travis-ci.org/rahulsom/swaggydoc/builds/59760752

--- a/gapi/allclasses-frame.html
+++ b/gapi/allclasses-frame.html
@@ -12,7 +12,9 @@
     <h1 class="bar">All Classes</h1>
     <div class="indexContainer">
         <ul>
-        <li><a href="com/github/rahulsom/swaggydoc/ApiController.html" title="class in com.github.rahulsom.swaggydoc" target="classFrame">ApiController</a></li>
+        <li><a href="com/github/rahulsom/swaggydoc/test/Album.html" title="class in com.github.rahulsom.swaggydoc.test" target="classFrame">Album</a></li>
+<li><a href="com/github/rahulsom/swaggydoc/test/AlbumController.html" title="class in com.github.rahulsom.swaggydoc.test" target="classFrame">AlbumController</a></li>
+<li><a href="com/github/rahulsom/swaggydoc/ApiController.html" title="class in com.github.rahulsom.swaggydoc" target="classFrame">ApiController</a></li>
 <li><a href="com/github/rahulsom/swaggydoc/ApiDeclaration.html" title="class in com.github.rahulsom.swaggydoc" target="classFrame">ApiDeclaration</a></li>
 <li><a href="com/github/rahulsom/swaggydoc/ApiInfo.html" title="class in com.github.rahulsom.swaggydoc" target="classFrame">ApiInfo</a></li>
 <li><a href="com/github/rahulsom/swaggydoc/BooleanField.html" title="class in com.github.rahulsom.swaggydoc" target="classFrame">BooleanField</a></li>
@@ -22,8 +24,10 @@
 <li><a href="com/github/rahulsom/swaggydoc/test/Domain.html" title="class in com.github.rahulsom.swaggydoc.test" target="classFrame">Domain</a></li>
 <li><a href="com/github/rahulsom/swaggydoc/test/DomainController.html" title="class in com.github.rahulsom.swaggydoc.test" target="classFrame">DomainController</a></li>
 <li><a href="com/github/rahulsom/swaggydoc/test/DomainlessController.html" title="class in com.github.rahulsom.swaggydoc.test" target="classFrame">DomainlessController</a></li>
+<li><a href="com/github/rahulsom/swaggydoc/test/ErrorMessage.html" title="class in com.github.rahulsom.swaggydoc.test" target="classFrame">ErrorMessage</a></li>
 <li><a href="com/github/rahulsom/swaggydoc/Field.html" title="class in com.github.rahulsom.swaggydoc" target="classFrame">Field</a></li>
 <li><a href="com/github/rahulsom/swaggydoc/Item.html" title="class in com.github.rahulsom.swaggydoc" target="classFrame">Item</a></li>
+<li><a href="com/github/rahulsom/swaggydoc/test/LowForm.html" title="class in com.github.rahulsom.swaggydoc.test" target="classFrame">LowForm</a></li>
 <li><a href="com/github/rahulsom/swaggydoc/test/LowLevelController.html" title="class in com.github.rahulsom.swaggydoc.test" target="classFrame">LowLevelController</a></li>
 <li><a href="com/github/rahulsom/swaggydoc/test/MappedController.html" title="class in com.github.rahulsom.swaggydoc.test" target="classFrame">MappedController</a></li>
 <li><a href="com/github/rahulsom/swaggydoc/test/MappedWithAnnotatedSpecialController.html" title="class in com.github.rahulsom.swaggydoc.test" target="classFrame">MappedWithAnnotatedSpecialController</a></li>
@@ -36,15 +40,19 @@
 <li><a href="com/github/rahulsom/swaggydoc/Operation.html" title="class in com.github.rahulsom.swaggydoc" target="classFrame">Operation</a></li>
 <li><a href="com/github/rahulsom/swaggydoc/Pair.html" title="class in com.github.rahulsom.swaggydoc" target="classFrame">Pair</a></li>
 <li><a href="com/github/rahulsom/swaggydoc/Parameter.html" title="class in com.github.rahulsom.swaggydoc" target="classFrame">Parameter</a></li>
+<li><a href="com/github/rahulsom/swaggydoc/test/Photo.html" title="class in com.github.rahulsom.swaggydoc.test" target="classFrame">Photo</a></li>
+<li><a href="com/github/rahulsom/swaggydoc/test/PhotoController.html" title="class in com.github.rahulsom.swaggydoc.test" target="classFrame">PhotoController</a></li>
 <li><a href="com/github/rahulsom/swaggydoc/test/Pogo.html" title="class in com.github.rahulsom.swaggydoc.test" target="classFrame">Pogo</a></li>
 <li><a href="com/github/rahulsom/swaggydoc/test/PogoController.html" title="class in com.github.rahulsom.swaggydoc.test" target="classFrame">PogoController</a></li>
 <li><a href="com/github/rahulsom/swaggydoc/RefField.html" title="class in com.github.rahulsom.swaggydoc" target="classFrame">RefField</a></li>
 <li><a href="com/github/rahulsom/swaggydoc/RefItem.html" title="class in com.github.rahulsom.swaggydoc" target="classFrame">RefItem</a></li>
 <li><a href="com/github/rahulsom/swaggydoc/Resources.html" title="class in com.github.rahulsom.swaggydoc" target="classFrame">Resources</a></li>
 <li><a href="com/github/rahulsom/swaggydoc/ResponseMessage.html" title="class in com.github.rahulsom.swaggydoc" target="classFrame">ResponseMessage</a></li>
+<li><a href="com/github/rahulsom/swaggydoc/test/ShirtSize.html" title="enum in com.github.rahulsom.swaggydoc.test" target="classFrame">ShirtSize</a></li>
 <li><a href="com/github/rahulsom/swaggydoc/StringField.html" title="class in com.github.rahulsom.swaggydoc" target="classFrame">StringField</a></li>
 <li><a href="com/github/rahulsom/swaggydoc/test/SubPogo.html" title="class in com.github.rahulsom.swaggydoc.test" target="classFrame">SubPogo</a></li>
 <li><a href="com/github/rahulsom/swaggydoc/test/Subdomain.html" title="class in com.github.rahulsom.swaggydoc.test" target="classFrame">Subdomain</a></li>
+<li><a href="com/github/rahulsom/swaggydoc/SwaggyAdditionalClasses.html" title="annotation type in com.github.rahulsom.swaggydoc" target="classFrame">SwaggyAdditionalClasses</a></li>
 <li><a href="com/github/rahulsom/swaggydoc/SwaggyAnnotations.html" title="class in com.github.rahulsom.swaggydoc" target="classFrame">SwaggyAnnotations</a></li>
 <li><a href="com/github/rahulsom/swaggydoc/SwaggyDataService.html" title="class in com.github.rahulsom.swaggydoc" target="classFrame">SwaggyDataService</a></li>
 <li><a href="com/github/rahulsom/swaggydoc/SwaggyDelete.html" title="annotation type in com.github.rahulsom.swaggydoc" target="classFrame">SwaggyDelete</a></li>
