--- a/gapi/com/github/rahulsom/swaggydoc/package-summary.html
+++ b/gapi/com/github/rahulsom/swaggydoc/package-summary.html
@@ -286,6 +286,14 @@ function windowTitle()
                     </tr>
 <tr class="altColor">
                             <td class="colOne">
+                                <strong><a href="SwaggyAdditionalClasses.html" title="class in com/github/rahulsom/swaggydoc">
+                                    SwaggyAdditionalClasses
+                                </a></strong>
+                            </td>
+                            <td></td>
+                        </tr>
+<tr class="altColor">
+                            <td class="colOne">
                                 <strong><a href="SwaggyDelete.html" title="class in com/github/rahulsom/swaggydoc">
                                     SwaggyDelete
                                 </a></strong>
