--- a/gapi/com/github/rahulsom/swaggydoc/test/package-summary.html
+++ b/gapi/com/github/rahulsom/swaggydoc/test/package-summary.html
@@ -72,6 +72,22 @@ function windowTitle()
                     </tr>
 <tr class="altColor">
                             <td class="colOne">
+                                <strong><a href="Album.html" title="class in com/github/rahulsom/swaggydoc/test">
+                                    Album
+                                </a></strong>
+                            </td>
+                            <td></td>
+                        </tr>
+<tr class="altColor">
+                            <td class="colOne">
+                                <strong><a href="AlbumController.html" title="class in com/github/rahulsom/swaggydoc/test">
+                                    AlbumController
+                                </a></strong>
+                            </td>
+                            <td></td>
+                        </tr>
+<tr class="altColor">
+                            <td class="colOne">
                                 <strong><a href="Domain.html" title="class in com/github/rahulsom/swaggydoc/test">
                                     Domain
                                 </a></strong>
@@ -93,6 +109,22 @@ function windowTitle()
                                 </a></strong>
                             </td>
                             <td></td>
+                        </tr>
+<tr class="altColor">
+                            <td class="colOne">
+                                <strong><a href="ErrorMessage.html" title="class in com/github/rahulsom/swaggydoc/test">
+                                    ErrorMessage
+                                </a></strong>
+                            </td>
+                            <td>Created by rahul on 4/22/15.</td>
+                        </tr>
+<tr class="altColor">
+                            <td class="colOne">
+                                <strong><a href="LowForm.html" title="class in com/github/rahulsom/swaggydoc/test">
+                                    LowForm
+                                </a></strong>
+                            </td>
+                            <td>Created by rahul on 4/22/15.</td>
                         </tr>
 <tr class="altColor">
                             <td class="colOne">
@@ -144,6 +176,22 @@ function windowTitle()
                         </tr>
 <tr class="altColor">
                             <td class="colOne">
+                                <strong><a href="Photo.html" title="class in com/github/rahulsom/swaggydoc/test">
+                                    Photo
+                                </a></strong>
+                            </td>
+                            <td></td>
+                        </tr>
+<tr class="altColor">
+                            <td class="colOne">
+                                <strong><a href="PhotoController.html" title="class in com/github/rahulsom/swaggydoc/test">
+                                    PhotoController
+                                </a></strong>
+                            </td>
+                            <td></td>
+                        </tr>
+<tr class="altColor">
+                            <td class="colOne">
                                 <strong><a href="Pogo.html" title="class in com/github/rahulsom/swaggydoc/test">
                                     Pogo
                                 </a></strong>
@@ -182,6 +230,32 @@ function windowTitle()
         </div>
     
 
+
+    <div class="summary">
+        <ul class="blockList">
+            <li class="blockList">
+                <table border="0" cellpadding="3" cellspacing="0" summary="Enum Summary">
+                    <caption><span>Enum Summary</span><span class="tabEnd">&nbsp;</span></caption>
+                    <tbody>
+                    <tr>
+                        <th class="colFirst" scope="col">Enum</th>
+                        <th class="colLast" scope="col">Description</th>
+                    </tr>
+<tr class="altColor">
+                            <td class="colOne">
+                                <strong><a href="ShirtSize.html" title="class in com/github/rahulsom/swaggydoc/test">
+                                    ShirtSize
+                                </a></strong>
+                            </td>
+                            <td>Created by rahul on 4/22/15.</td>
+                        </tr>
+
+                    </tbody>
+                </table>
+            </li>
+            </ul>
+        </div>
+    
 
 
 
