Updating docs for Travis build: https://travis-ci.org/rahulsom/swaggydoc/builds/59965760

--- a/ref/Swaggy Annotations/SwaggyAdditionalClasses.html
+++ b/ref/Swaggy Annotations/SwaggyAdditionalClasses.html
@@ -2,7 +2,7 @@
                       "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en">
 <head>
-    <title>Swaggydoc Plugin 0.16</title>
+    <title>Swaggydoc Plugin 0.17</title>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
     <link rel="stylesheet" href="../../css/main.css" type="text/css" media="screen, print" title="Style" charset="utf-8"/>
     <link rel="stylesheet" href="../../css/pdf.css" type="text/css" media="print" title="PDF" charset="utf-8"/>
@@ -53,7 +53,7 @@ function addJsClass(el) {
 
                 <span id='toggle-col1' class="toggle">(<a href="#" onclick="localToggle(); return false;">Quick Reference</a>)</span>
 
-                <h1>SwaggyDelete</h1><p class="paragraph"/><h2>Purpose</h2><p class="paragraph"/>Tells Swaggy that additional classes need to be documented for the method documentation to be complete. Typically
+                <h1>SwaggyAdditionalClasses</h1><p class="paragraph"/><h2>Purpose</h2><p class="paragraph"/>Tells Swaggy that additional classes need to be documented for the method documentation to be complete. Typically
 these are command objects.<p class="paragraph"/><h2>Examples</h2><p class="paragraph"/><div class="code"><pre>@ApiOperation(value = <span class="java&#45;quote">"<span class="java&#45;object">Process</span> Custom Request"</span>, response = ResponseThatIsAutomaticallyDocumented)
 @ApiResponses(&#91;
     @ApiResponse(code = 422, message = 'Bad Entity Received'),
