--- a/guide/single.html
+++ b/guide/single.html
@@ -2,7 +2,7 @@
                       "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en">
     <head>
-        <title>Swaggydoc Plugin 0.16</title>
+        <title>Swaggydoc Plugin 0.17</title>
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
         <link rel="stylesheet" href="../css/main.css" type="text/css" media="screen, print" title="Style" charset="utf-8" />
         <link rel="stylesheet" href="../css/pdf.css" type="text/css" media="print" title="PDF" charset="utf-8" />
@@ -53,7 +53,7 @@ function addJsClass(el) {
                         <div class="project">
                             <h1>Swaggydoc Plugin - Reference Documentation</h1>
                             <p><strong>Authors:</strong> Rahul Somasunderam</p>
-                            <p><strong>Version:</strong> 0.16</p>
+                            <p><strong>Version:</strong> 0.17</p>
                             
                         </div>
 
@@ -71,12 +71,21 @@ function addJsClass(el) {
 <h1 id="introduction">1 Introduction</h1>
 Swaggydoc makes it easy to document grails controllers using swagger.<p class="paragraph"/>This guide documents configuration defaults and describes how to configure the Swaggydoc plugin for Grails applications.<p class="paragraph"/><h4>Release History</h4>
 <ul class="star">
+<li>2015-04-24 - 0.17</li>
+<ul class="star">
+<li>Support for multiple values</li>
+<li>No responseModel when responseModel is 'void'. This improves codegen.</li>
+<li>integer params are now properly documented.</li>
+<li>Codegen now works for test data</li>
+</ul>
 <li>2015-04-23 - 0.16</li>
+<ul class="star">
 <li>Added support for overriding produces and consumes per method</li>
 <li>Added support for documenting command objects</li>
 <li>Added support for enums as dataTypes in ApiOperation</li>
 <li>Added support for responseContainers</li>
 <li>Added support for response classes for ApiResponse</li>
+</ul>
 <li>2015-04-20 - 0.15</li>
 <ul class="star">
 <li>Fully documented supported annotations</li>
