Updating docs for Travis build: https://travis-ci.org/rahulsom/swaggydoc/builds/60854887

--- a/gapi/allclasses-frame.html
+++ b/gapi/allclasses-frame.html
@@ -18,6 +18,8 @@
 <li><a href="com/github/rahulsom/swaggydoc/ApiDeclaration.html" title="class in com.github.rahulsom.swaggydoc" target="classFrame">ApiDeclaration</a></li>
 <li><a href="com/github/rahulsom/swaggydoc/ApiInfo.html" title="class in com.github.rahulsom.swaggydoc" target="classFrame">ApiInfo</a></li>
 <li><a href="com/github/rahulsom/swaggydoc/BooleanField.html" title="class in com.github.rahulsom.swaggydoc" target="classFrame">BooleanField</a></li>
+<li><a href="com/github/rahulsom/swaggydoc/test/Category.html" title="class in com.github.rahulsom.swaggydoc.test" target="classFrame">Category</a></li>
+<li><a href="com/github/rahulsom/swaggydoc/test/CategoryController.html" title="class in com.github.rahulsom.swaggydoc.test" target="classFrame">CategoryController</a></li>
 <li><a href="com/github/rahulsom/swaggydoc/ContainerField.html" title="class in com.github.rahulsom.swaggydoc" target="classFrame">ContainerField</a></li>
 <li><a href="com/github/rahulsom/swaggydoc/ControllerDefinition.html" title="class in com.github.rahulsom.swaggydoc" target="classFrame">ControllerDefinition</a></li>
 <li><a href="com/github/rahulsom/swaggydoc/DefaultAction.html" title="class in com.github.rahulsom.swaggydoc" target="classFrame">DefaultAction</a></li>
