--- a/gapi/com/github/rahulsom/swaggydoc/test/package-summary.html
+++ b/gapi/com/github/rahulsom/swaggydoc/test/package-summary.html
@@ -88,6 +88,22 @@ function windowTitle()
                         </tr>
 <tr class="altColor">
                             <td class="colOne">
+                                <strong><a href="Category.html" title="class in com/github/rahulsom/swaggydoc/test">
+                                    Category
+                                </a></strong>
+                            </td>
+                            <td></td>
+                        </tr>
+<tr class="altColor">
+                            <td class="colOne">
+                                <strong><a href="CategoryController.html" title="class in com/github/rahulsom/swaggydoc/test">
+                                    CategoryController
+                                </a></strong>
+                            </td>
+                            <td></td>
+                        </tr>
+<tr class="altColor">
+                            <td class="colOne">
                                 <strong><a href="Domain.html" title="class in com/github/rahulsom/swaggydoc/test">
                                     Domain
                                 </a></strong>
