--- a/guide/introduction.html
+++ b/guide/introduction.html
@@ -2,7 +2,7 @@
                       "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en">
 <head>
-    <title>1 Introduction 0.18</title>
+    <title>1 Introduction 0.19</title>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
     <link rel="stylesheet" href="../css/main.css" type="text/css" media="screen, print" title="Style" charset="utf-8"/>
     <link rel="stylesheet" href="../css/pdf.css" type="text/css" media="print" title="PDF" charset="utf-8"/>
@@ -62,7 +62,7 @@ function addJsClass() {
 
                     <p><strong>Authors:</strong> Rahul Somasunderam</p>
 
-                    <p><strong>Version:</strong> 0.18</p>
+                    <p><strong>Version:</strong> 0.19</p>
 
                     
                 </div>
@@ -74,6 +74,10 @@ function addJsClass() {
 <h1 id="introduction">1 Introduction</h1>
 Swaggydoc makes it easy to document grails controllers using swagger.<p class="paragraph"/>This guide documents configuration defaults and describes how to configure the Swaggydoc plugin for Grails applications.<p class="paragraph"/><h4>Release History</h4>
 <ul class="star">
+<li>2015-05-01 - 0.19</li>
+<ul class="star">
+<li>Readded support for grails 2.3</li>
+</ul>
 <li>2015-05-01 - 0.18</li>
 <ul class="star">
 <li>Fixed Infinite loops in self referencing models</li>
